# GaurdRag

./: README.md
backend/: pyproject.toml  requirement.txt
backend/ai_agent/: agent.py
backend/rag/: embedding.py  vector_db.py
