[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "pymilvus>=2.6.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
]
